--- a/DASHBOARD/alunos.html
+++ b/DASHBOARD/alunos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
-<body>
+<body id="body">
     <div class="container">
         <div class="menu">
             <div class="perfil">
@@ -16,12 +16,11 @@
                 <p>Olá, Admin</p>
             </div>
             <ul>
-                <li id=""><a href="alunos.html">Alunos </a></li>
+                <li ><a href="alunos.html">Alunos </a></li>
                 <li><a href="professores.html">Professores</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
                 <li>Configurações</li>
-                <button id="fundoBranco" onclick="fundoBranco()">Light Theme</button>
-                <button id="fundoEscuro" onclick="fundoEscuro()">Dark theme</button>
+                <button onclick="darkMode()">Dark Mode</button>
             </ul>
         </div>
         <div class="grafico1">
