--- a/DASHBOARD/cursos.html
+++ b/DASHBOARD/cursos.html
@@ -20,8 +20,7 @@
                 <li><a href="professores.html">Professores</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
                 <li>Configurações</li>
-                <button id="fundoBranco" onclick="fundoBranco()">Light Theme</button>
-                <button id="fundoEscuro" onclick="fundoEscuro()">Dark theme</button>
+                <button onclick="darkMode()">Dark Mode</button>
             </ul>
         </div>
         <div class="curso1">
