--- a/DASHBOARD/alunos.html
+++ b/DASHBOARD/alunos.html
@@ -7,6 +7,9 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    <script src="GraficoAlunos.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="c:/Users/danil/Downloads/Server_Connection_in_js-main/db"></script>
 </head>
 <body id="body">
     <div class="container">
@@ -23,16 +26,16 @@
                 <button onclick="darkMode()">Dark Mode</button>
             </ul>
         </div>
-        <div class="grafico1">
+        <div class="grafico1" id="grafico1">
             <header>Gráfico 1</header>
         </div>  
-        <div class="grafico2">
+        <div class="grafico2" id="grafico2">
             <header>Gráfico 2</header>
         </div>
-        <div class="grafico3">
+        <div class="grafico3" id="grafico3">
             <header>Gráfico 3</header>
         </div>  
-        <div class="grafico4">
+        <div class="grafico4" id="grafico4">
             <header>Gráfico 4</header>
         </div>
         <div class="info">
