--- a/DASHBOARD/loginProfessores.html
+++ b/DASHBOARD/loginProfessores.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Dashboard - Login de Professores</title>
     <link rel="stylesheet" href="index.css">
     <script src="loginProfessores.js"></script>
 </head>
 
 <body class="body_html_Login">
-    <header class="comum">LOGIN DE PROFESSOR</header><br><br><br><br><br><br><br><br><br><br><br>
+    <header class="comum">LOGIN DE PROFESSOR</header>
     <div class="card">
         <form id="login_Form">
-        <div>
-            <label for="email"></label>
-            <input type="text" id="email" name="email" placeholder="EMAIL DO PROFESSOR" class="menucaixa2" type="submit">
-        </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="EMAIL" class="menucaixa2">
+            </div>
 
-        <div>
-            <label for="senhaProfessor"></label>
-            <input type="password" id="senhaProfessor" nome="senhaProfessor" placeholder="SENHA DO PROFESSOR" class="menucaixa2" type="submit">
-        </div>
+            <div>
+                <label for="cpf">CPF</label>
+                <input type="text" id="cpf" name="cpf" placeholder="CPF" class="menucaixa2">
+            </div>
 
-        <button class="button" id="btn" onclick="professor.loginButton()">LOGIN</button>
+            <div>
+                <label for="senhaProfessor">Senha</label>
+                <input type="password" id="senha" name="senha" placeholder="SENHA" class="menucaixa2">
+            </div>
+
+            <button class="button" id="btn">LOGIN</button>
         </form>
-    </div><br>
+    </div>
 </body>
+</html>
