--- a/DASHBOARD/loginProfessores.html
+++ b/DASHBOARD/loginProfessores.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="body_html_Login">
-    <header class="comum">LOGIN DE PROFESSOR</header>
+    <header class="comum">LOGIN DE PROFESSOR</header><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div class="card">
         <form id="login_Form">
             <div>
